--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "tslint-config-prettier": "^1.18.0"
   },
   "devDependencies": {
     "@types/react": "^16.8.24",
