--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,1 +1,24 @@
-
+# Manually adding all the default prettier options.
+# This is to prevent VSCode and husky>lint-staged from having conflicting prettier formatting.
+# https://prettier.io/docs/en/options.html
+printWidth: 80
+tabWidth: 2
+useTabs: false
+semi: true
+singleQuote: false
+quoteProps: "as-needed"
+jsxSingleQuote: false
+trailingComma: "es5"
+bracketSpacing: true
+jsxBracketSameLine: false
+arrowParens: "always"
+# rangeStart
+# rangeEnd
+# parser
+# filepath
+requirePragma: false
+insertPragma: false
+proseWrap: "preserve"
+htmlWhitespaceSensitivity: "css"
+# vueIndentScriptAndStyle
+endOfLine: "lf"
