--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prettier:format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,json}' "
   },
   "dependencies": {
+    "figma-plugin-ds": "^0.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "tslint-config-prettier": "^1.18.0"
